Fix Column Maxi gap

--- a/src/blocks/column-maxi/editor.scss
+++ b/src/blocks/column-maxi/editor.scss
@@ -13,7 +13,7 @@
 			width: 100% !important;
 			max-width: 100% !important;
 			flex-basis: 100% !important;
-			margin: auto;
+			margin: 0 !important;
 			height: 100%;
 			outline: 1px solid #81bdda !important;
 			vertical-align: top;
